2008-10-07  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/functions_reporting.php: Handle empty and zero values in
	get_agent_module_sla.

	* include/config_process.php: SLA Period shouldn't be 0 (which is
	apparently default in the database). If SLA is empty (NULL, 0, false 
	or '') then it get's reset to a default value.

	* godmode/setup/setup.php: SLA Period was hidden because of a miscount 

2008-10-06  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* godmode/agentes/configurar_agente.php: Double values in query removed
	
	* godmode/agentes/agent_manager.php: WMI Server now properly displays
	None if no WMI server is present

	* include/functions_html.php: If the query returns empty for
	print_select_from_sql, a box should still be printed. Fixed.

2008-10-05  Raul Mateos  <raulofpandora@gmail.com>

	* install.php: Updated PHP version dependency.

2008-10-02  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* operation/reporting/reporting_xml.php: Updated to handle logins in
	case our XML client can't handle sessions. If you use this, try to
	use POST requests and HTTPS for login. Only if your client is really
	braindead should you be using GET for login. Example in source.

2008-10-02  Esteban Sanchez  <estebans@artica.es>

	* operation/reporting/reporting_viewer.php,
	operation/reporting/reporting_xml.php: Quote order field on
	get_db_all_rows_field_filter(), since it was a reserved word in SQL.
	Style corrections.

2008-10-02  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Removed quotes when using $order_field so
	it can be used order (ASC or DESC).

	* include/functions_html.php: Added thead and tbody to be more XHTML
	compliant.
	
	* operation/reporting/graph_viewer.php: Fixed a typo error that was
	not allowing to remove a graph. Style correction, variables renamed to
	have a meaning ($row has no scope or meaning, please do not use it!)
	and better use of the parameters.

	* godmode/extensions.php: Style correction.
