@@ -1,3 +1,8 @@
+2008-10-08  Evi Vanoost  <vanooste@rcbi.rochester.edu>
+
+	* godmode/db/db_event.php: Didn't work for some or another reason.
+	Partially rewrote it. It works now.
+
 2008-10-07  Evi Vanoost  <vanooste@rcbi.rochester.edu>
 
 	* include/functions_reporting.php: Handle empty and zero values in
